--- a/Typing_speed.HTML
+++ b/Typing_speed.HTML
@@ -6,16 +6,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      #greenWordsToDisplay {
-        color: green;
-      }
+     .green {
+      color:green;
+     }
     </style>
   </head>
 
-  <body>
+  <body>    
     <div class="container">
-        <h1 id="greenWordsToDisplay"></h1> 
-        <h1 id="wordsToDisplay"></h1>         
+        <h1 id="wordsToDisplay"></h1>
+        <h1 id="test"></h1>                 
         <label for="typeWords">Type words:</label>   
         <input type="text" id="typeWords">         
     </div>
@@ -25,5 +25,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
