--- a/Typing_speed.HTML
+++ b/Typing_speed.HTML
@@ -17,8 +17,8 @@
 
   <body>    
     <div class="container">
-        <h1 id="wordsToDisplay"></h1>
-        <h1 id="test"></h1>                 
+        <h1 id="Time"></h1> 
+        <h2 id="wordsToDisplay"></h2>                        
         <label for="typeWords">Type words:</label>   
         <input type="text" id="typeWords">         
     </div>
